<resources>
    <string name="app_name">Calculator</string>
    <string name="myname">Tharaka</string>
    <string name="first">First Number</string>
    <string name="last">Last Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="answer">Answer : </string>
</resources>
